--- a/product.html
+++ b/product.html
@@ -223,10 +223,11 @@
                                     Раздвижная система:
                                 </div>
                                 <div class="product-page__constructor-content">
-                                    <a href="#" data-value="Браун" class="product-page__constructor-button js-constructor-button _text _active">Браун</a>
-                                    <a href="#" data-value="Смарт" class="product-page__constructor-button js-constructor-button _text">Смарт</a>
-                                    <a href="#" data-value="Rolla" class="product-page__constructor-button js-constructor-button _text">Rolla</a>
+                                    <a href="#" data-value="Браун" data-characteristic-id="1" class="product-page__constructor-button js-constructor-button _text _active">Браун</a>
+                                    <a href="#" data-value="Смарт" data-characteristic-id="2" class="product-page__constructor-button js-constructor-button _text">Смарт</a>
+                                    <a href="#" data-value="Rolla" data-characteristic-id="3" class="product-page__constructor-button js-constructor-button _text">Rolla</a>
                                 </div>
+                                <input type="text" class="js-constructor-block-input _hidden">
                                 <a href="#" class="link _color-orange _font-sm">
                                     <span class="link__text">Подробно о системах</span>
                                 </a>
@@ -236,16 +237,17 @@
                                     Цвет профиля: <span class="js-constructor-label-value">Серебро</span>
                                 </div>
                                 <div class="product-page__constructor-content">
-                                    <a href="#" data-value="Серебро" class="product-page__constructor-button js-constructor-button _active">
+                                    <a href="#" data-value="Серебро" data-characteristic-id="4" class="product-page__constructor-button js-constructor-button _active">
                                         <img src="images/colors/col-med-1.jpg" alt="colour">
                                     </a>
-                                    <a href="#" data-value="Золото" class="product-page__constructor-button js-constructor-button">
+                                    <a href="#" data-value="Золото" data-characteristic-id="5" class="product-page__constructor-button js-constructor-button">
                                         <img src="images/colors/col-med-2.jpg" alt="colour">
                                     </a>
-                                    <a href="#" data-value="Оникс" class="product-page__constructor-button js-constructor-button">
+                                    <a href="#" data-value="Оникс" data-characteristic-id="6" class="product-page__constructor-button js-constructor-button">
                                         <img src="images/colors/col-med-3.jpg" alt="colour">
                                     </a>
                                 </div>
+                                <input type="text" class="js-constructor-block-input _hidden">
                                 <a href="#mfp-big-samples" class="link _color-orange _font-sm js-popup-toggle">
                                     <span class="link__text">Крупные образцы</span>
                                 </a>
@@ -282,6 +284,7 @@
                                         <img src="images/colors/col-med-11.jpg" alt="colour">
                                     </a>
                                 </div>
+                                <input type="text" class="js-constructor-block-input _hidden">
                                 <a href="#mfp-big-samples" class="link _color-orange _font-sm js-popup-toggle">
                                     <span class="link__text">Крупные образцы</span>
                                 </a>
@@ -291,13 +294,13 @@
                                     Рисунок на зеркале: <span class="js-constructor-label-value">794</span>
                                 </div>
                                 <div class="product-page__constructor-content js-constructor-images-list">
-                                    <a href="#" data-value="794" class="product-page__constructor-button js-constructor-button _active">
+                                    <a href="#" data-value="794" data-characteristic-id="794" class="product-page__constructor-button js-constructor-button _active">
                                         <img src="images/colors/col-med-12.jpg" alt="colour">
                                     </a>
-                                    <a href="#" data-value="795" class="product-page__constructor-button js-constructor-button">
+                                    <a href="#" data-value="795" data-characteristic-id="795" class="product-page__constructor-button js-constructor-button">
                                         <img src="images/colors/col-med-13.jpg" alt="colour">
                                     </a>
-                                    <a href="#" data-value="796" class="product-page__constructor-button js-constructor-button">
+                                    <a href="#" data-value="796" data-characteristic-id="796" class="product-page__constructor-button js-constructor-button">
                                         <img src="images/colors/col-med-14.jpg" alt="colour">
                                     </a>
                                     <a href="#" class="product-page__constructor-button js-constructor-button">
@@ -349,6 +352,7 @@
                                         <img src="images/colors/col-med-18.jpg" alt="colour">
                                     </a>
                                 </div>
+                                <input type="text" class="js-constructor-block-input _hidden">
                                 <a href="#mfp-images-list" class="link _color-orange _font-sm js-popup-toggle">
                                     <span class="link__text">Полный Список</span>
                                 </a>
@@ -1472,42 +1476,54 @@
                 <a href="#" class="popup__samples-item _clickable js-constructor-image"
                    data-thumb-src="images/colors/col-7_big.jpg"
                    data-value="001"
-                   data-alt="colour-001">
+                   data-alt="colour-001"
+                   data-characteristic-id="111"
+                >
                     <img class="popup__samples-item-img" src="images/colors/col-7_big.jpg" alt="color">
                     <span class="popup__samples-item-title">Рисунок на зеркале 001</span>
                 </a>
                 <a href="#" class="popup__samples-item _clickable js-constructor-image"
                    data-thumb-src="images/colors/col-8_big.jpg"
                    data-value="002"
-                   data-alt="colour-002">
+                   data-alt="colour-002"
+                   data-characteristic-id="112"
+                >
                     <img class="popup__samples-item-img" src="images/colors/col-8_big.jpg" alt="color">
                     <span class="popup__samples-item-title">Рисунок на зеркале 002</span>
                 </a>
                 <a href="#" class="popup__samples-item _clickable js-constructor-image"
                    data-thumb-src="images/colors/col-9_big.jpg"
                    data-value="003"
-                   data-alt="colour-003">
+                   data-alt="colour-003"
+                   data-characteristic-id="113"
+                >
                     <img class="popup__samples-item-img" src="images/colors/col-9_big.jpg" alt="color">
                     <span class="popup__samples-item-title">Рисунок на зеркале 003</span>
                 </a>
                 <a href="#" class="popup__samples-item _clickable js-constructor-image"
                    data-thumb-src="images/colors/col-10_big.jpg"
                    data-value="004"
-                   data-alt="colour-004">
+                   data-alt="colour-004"
+                   data-characteristic-id="114"
+                >
                     <img class="popup__samples-item-img" src="images/colors/col-10_big.jpg" alt="color">
                     <span class="popup__samples-item-title">Рисунок на зеркале 004</span>
                 </a>
                 <a href="#" class="popup__samples-item _clickable js-constructor-image"
                    data-thumb-src="images/colors/col-11_big.jpg"
                    data-value="005"
-                   data-alt="colour-005">
+                   data-alt="colour-005"
+                   data-characteristic-id="115"
+                >
                     <img class="popup__samples-item-img" src="images/colors/col-11_big.jpg" alt="color">
                     <span class="popup__samples-item-title">Рисунок на зеркале 005</span>
                 </a>
                 <a href="#" class="popup__samples-item _clickable js-constructor-image"
                    data-thumb-src="images/colors/col-12_big.jpg"
                    data-value="006"
-                   data-alt="colour-006">
+                   data-alt="colour-006"
+                   data-characteristic-id="116"
+                >
                     <img class="popup__samples-item-img" src="images/colors/col-12_big.jpg" alt="color">
                     <span class="popup__samples-item-title">Рисунок на зеркале 006</span>
                 </a>
